components/reusable-components/footer/footer.module.scss
.lightBackground {
  background-color: #121d36;
}

.darkBackground {
  background-color: #070b15;
}

.footer {
  display: flex;
  justify-content: center;
  width: 100%;
  color: var(--text-color);
  padding-top: clamp(3.75rem, 7.60292rem + -3.211vw, 6.75rem);
  padding-inline: clamp(2.25rem, -5.6214rem + 15.101vw, 12.5rem);
  padding-bottom: clamp(1.25rem, 3.97903rem + -2.274vw, 3.375rem);

  .footerContainer {
    width: 100%;

    .footerTitle {
      font-size: var(--fs-title);
      line-height: var(--lh-title);
      font-weight: 500;
      margin-bottom: clamp(1.25rem, 0.89459rem + 1.338vw, 2.5rem);
    }

    .footerLogo {
      width: 100%;
      max-width: clamp(9.75rem, 8.82616rem + 3.478vw, 13rem);
      height: auto;
      margin-bottom: clamp(4rem, 5.28422rem + -1.07vw, 5rem);
    }

    .footerSectionsContainer {
      display: flex;
      justify-content: space-between;
      flex-wrap: wrap;

      .newsletterContainer {
        width: 22.5rem;
      }

      .contactEmail {
        font-size: var(--fs-body);
        line-height: var(--lh-body);
        font-weight: 500;
      }

      .socialIconsContainer {
        display: flex;
        flex-wrap: wrap;
        width: 100%;
        gap: clamp(0.75rem, 0.67881rem + 0.268vw, 1rem);

        a {
          line-height: 0;
        }
      }
    }

    .copyrightContainer {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      color: #707a88;
      font-size: var(--fs-tag);
      line-height: 10px;
      margin-top: clamp(4rem, 5.28422rem + -1.07vw, 5rem);
      padding: clamp(0.875rem, 0.76848rem + 0.401vw, 1.25rem) 0;
      border-top: 0.5px solid #fff;
    }
  }
}

@media only screen and (max-width: 1240px) {
  .socialMediaContainer {
    width: 12.6875rem;

    .socialMediaTitle {
      margin-left: 2.1875rem;
    }

    .socialIconsContainer {
      display: flex;
      justify-content: flex-end;
    }
  }
}

@media only screen and (max-width: 1023px) {
  .contactContainer {
    margin-top: 3.75rem;
    order: 1;
  }

  .socialMediaContainer {
    margin-left: clamp(3.125rem, -22.5523rem + 49.261vw, 15.625rem);
    order: 0;
  }
}

@media only screen and (max-width: 834px) {
  .socialIconsContainer {
    img {
      width: 100%;
      max-width: clamp(2.25rem, 1.47066rem + 2.934vw, 3rem);
      height: auto;
    }
  }
}

@media only screen and (max-width: 699px) {
  .newsletterContainer {
    width: 100% !important;
  }

  .contactContainer {
    order: 0;
  }

  .socialMediaContainer {
    margin-top: 3.75rem;
    width: 100%;
    order: 1;
    margin-left: 0;

    .socialMediaTitle {
      margin-left: 0;
    }

    .socialIconsContainer {
      justify-content: flex-start;
    }
  }
}

